Replaced deprecated usage of members of Type wrappers with correct ones